[package]
name = "alloc_geiger"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Josh Stone <cuviper@gmail.com>"]
repository = "https://github.com/cuviper/alloc_geiger"
keywords = ["allocator"]
categories = ["memory-management"]
readme = "README.md"
description = """
A Rust allocator which makes sound when active, like a Geiger counter.
"""

[dependencies.once_cell]
version = "0.2"
default-features = false

[dev-dependencies]
jemallocator = "0.3"
