[package]
name = "alloc_geiger"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/cuviper/alloc_geiger"
keywords = ["allocator"]
categories = ["memory-management"]
readme = "README.md"
description = """
A Rust allocator which makes sound when active, like a Geiger counter.
"""
rust-version = "1.70"

[dependencies.rodio]
version = "0.17"
default-features = false

[dev-dependencies]
jemallocator = "0.5"
